# SEM

./: .bzrignore  .gitignore  LICENSE  Makefile  addInformations.py  cem_tagger.py  changelog.md  corpus.py  install.md  launch.bat  lefffExtractPickled.py  readme.md  requirements.txt  segmentation.py  sem  sem_gui.bat  sem_gui.sh  sem_tagger.py  setup.cfg  setup.py  tagger_wlefff.py  tagger_wolefff.py
examples/: dump_pipeline.py  load_pipeline.py  readme.md
ext/wapiti/: Makefile  make.bat  wapiti
manual/: biblio.bib  compile.bat  compile.sh  macros.sty  manual-en.tex  manual-fr.tex  subfile.tex
manual/en/: file-formats.tex  installation.tex  retrain-sem.tex  usage.tex
manual/fr/: file-formats.tex  installation.tex  usage.tex
non-regression/models/: model
readme/: manuel  readme
readme/LeFFF/: LICENSE  readme.md
resources/: .config.backup  config.default
resources/css/: tabs.css
resources/lefff/: ADJ  ADV  ADVWH  CC  CLO  CLR  CLS  CS  DET  DETWH  ET  I  NC  NPP  P  P+D  P+PRO  PONCT  PRO  PROREL  V  VIMP  VINF  VPP  VPR  VS
resources/patterns/: NER.txt
ressources/: tag_list
sem/: CRF.py  __init__.py  __main__.py  annotators.py  coder.py  constants.py  dictionaries.py  exporters.py  features.py  gui_components.py  importers.py  information.py  logger.py  master_parser.py  misc.py  pipeline_factory.py  pipelines.py  processors.py  setup.py  span.py  spannedbounds.py  storage.py  tokenisers.py  trie.py  util.py  wapiti.py
software/: __init__.py
src/: __init__.py  chunking_fscore.py  gui.py  tagger.py  tagger_old.py
tests/: test_segmentation.py
(+337 files in other folders)
