[metadata]
name = semtagger
version = attr: sem.__version__
license = MIT
author = Yoann Dupont
author_email = yoa.dupont@gmail.com
description = SEM tool for text annotation
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/YoannDupont/SEM
project_urls =
    Bug Tracker = https://github.com/YoannDupont/SEM/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    natural language processing
    POS tagging
    chunking
    named entity recognition

[options]
packages =
    sem
    sem.modules
    sem.tests
python_requires = >=3.6
install_requires =
    libwapiti
    dill
    pymorphy2

[options.entry_points]
console_scripts =
    sem = sem.__main__:main
    sem-annotate = sem.modules.annotate:main
    sem-annotation_gui = sem.modules.annotation_gui:main
    sem-clean = sem.modules.clean:main
    sem-download = sem.modules.download:main
    sem-enrich = sem.modules.enrich:main
    sem-evaluate = sem.modules.evaluate:main
    sem-export = sem.modules.export:main
    sem-gui = sem.modules.gui:main
    sem-label_consistency = sem.modules.label_consistency:main
    sem-segmentation = sem.modules.segmentation:main
    sem-tagger = sem.modules.tagger:main

[options.extras_require]
clipboard = pyperclip
all = pyperclip
